--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
-  "name": "InnerCourt Children Attendance System",
-  "short_name": "TICC CAS",
-  "description": "A secure, QR-based attendance system for church children departments.",
-  "start_url": "index.html",
+  "name": "Children Attendance System",
+  "short_name": "Attendance",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#2c5aa0",
-  "theme_color": "#2c5aa0",
+  "background_color": "#ffffff",
+  "theme_color": "#667eea",
   "orientation": "portrait",
+  "scope": "./",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
